:bug: Make scrollbar invisible on firefox

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,11 +36,12 @@ section {
         overflow: auto;
         padding-bottom: 22px;
 
-        // Make scrollbar invisible        
+        // Make scrollbar invisible     
         &::-webkit-scrollbar {
             display: none;
             width: 0;
             height: 0;
+            scrollbar-width: none;
             -webkit-appearance: none;
             -ms-overflow-style: none;
         }
